# pipedetect

./: .gitignore  README.md  pyproject.toml  quick_start.bat  quick_start.sh  run_examples.bat  run_examples.sh  usage.md
docs/: FINAL_PROJECT_STRUCTURE.md  INSTALLATION.md  PROJECT_SUMMARY.md  USAGE.md
scripts/: quick_start.bat  quick_start.sh  run_examples.bat  run_examples.sh
src/: detect.py  image2pose.py
src/pipedetect/: __init__.py
src/pipedetect/cli/: __init__.py  main.py  processor.py
src/pipedetect/core/: __init__.py  exceptions.py  models.py
src/pipedetect/detection/: __init__.py  mediapipe_wrapper.py  pose_detector.py
src/pipedetect/io/: __init__.py  exporters.py  file_manager.py  validators.py
src/pipedetect/utils/: __init__.py  logging_config.py  performance.py
src/pipedetect/visualization/: __init__.py  overlay_renderer.py  progress_tracker.py
tests/: __init__.py  test_core_models.py  test_exporters.py  test_pose_detector.py  test_processors.py  test_utils.py  test_validators.py
